# tupa-llm-wiki

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: guide.html  index.html  talk-script.md  workshop.md
docs/example-review/: card-example-2.html  card-example.html  index.html  shared.css
papers/: .gitkeep
review/assets/: review.css  review.js
scripts/: _wiki.py  extract_figures.py  fetch_ieee.py  fetch_paper.py  make_shortlist.py  search.py
secrets/: api-keys.example.json
sources/: .gitkeep
wiki/concepts/: .gitkeep
wiki/methods/: .gitkeep
wiki/overviews/: .gitkeep
